fixtures/cs-jwt-01/bad/inline-require-decode-only.js
function readHeader(token) {
	return require("jsonwebtoken").decode(token, { complete: true });
}

function readPayload(token) {
	return require("jsonwebtoken").decode(token);
}

module.exports = { readHeader, readPayload };
